tooling/nargo_cli/tests/snapshots/execute__tests__submodules_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15924843734912212643",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QXQqAMAiAszqQTm361lUarfsfoaIGYw+9tA/EP/hAYXiAK6amhqqvZ9DsbtY3My4iOYZMTBsGT6YomhYjIzXdgzFnE4uePKKTcKZDnQ98KM6x8eI/qKcLOt57u+bXVW6u//rFCcsMZwO8AQAA",
  "debug_symbols": "ZY1bCsMgEEX3Mt9+JIK0dSulBJ9hQFR8FIpk7zWhgtDPc++ZOw20kXXf0NuQgT8buKBEweA7NaBXlKPwJ+UiUgF+YwSM18DXhR0ELDoDnC0H+TPXOx3qg87qq4NM6Bzu2/ywx2+RUEhnfmirV1NbPnE04z6moIyuyZxLV9fnvw==",
  "file_map": {
    "50": {
      "source": "use my_submodule::my_helper;\n\nfn main(x: u1, y: u1) {\n    my_helper();\n    my_submodule::my_bool_or(x, y);\n}\n\nmod my_submodule {\n    pub fn my_bool_or(x: u1, y: u1) {\n        assert(x | y == 1);\n    }\n\n    pub fn my_helper() {}\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/submodules/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
