tooling/nargo_cli/tests/snapshots/execute__tests__submodules_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12382269374266053682",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUOw7CMAx1aAsEhEAwscAEc4DyGTvQg0RUPUePDhU2dd10ocmTovyc52fHiYIvFLYaMfYj6IJsMuzNMJw8cpmQOlUgna0kK+gH7R2x1+J8vR95DFgLvz75Hya9aUd8HvVfNOMMwH8m/jgMv5kgz7Nq84PwGwk7eYbb5MwmFzYLaH8CnIf2eK3S+emnLaEZr3CsBV+I+uGafOd/49BPvuYY61bEGqjWUso/3TkH7SXMt7zTsSMG118TiTmPqY53z3ilHWEOzd8UV22eDNfNANwfxvzqGvkT6Grn/hNhv8P5TOinHGd/6izv9lRebGmvtijSl10L/hp9NaSgm2++TmM673pfAP7+/0ToOQi/od7d2nEnPGdvbxTJibEIAAA=",
  "debug_symbols": "ldLdCoMgFMDxdznXXvgxV/kqY4SVhSAaZoMRvft0bBAxGOdGOOLvePPfYDDdOrXWj2EBddvAhV4nG3yetp1AF61zdmqP10DLwar3+2XWvoxL0jGBqiQB4wdQjMrMR+sMKEn3OwFWY0GDBJxiAcMCjgUCCcTPH1jNv6KuzkL8EQ0/iwtaSLS44sSep4eOVnfOfNobV98fUkzP2ZyqnGPozbBGU/o8pFk64JIImtfm1S8=",
  "file_map": {
    "50": {
      "source": "use my_submodule::my_helper;\n\nfn main(x: u1, y: u1) {\n    my_helper();\n    my_submodule::my_bool_or(x, y);\n}\n\nmod my_submodule {\n    pub fn my_bool_or(x: u1, y: u1) {\n        assert(x | y == 1);\n    }\n\n    pub fn my_helper() {}\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/submodules/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
